tests/compile_fail/state/wrong_state_enum.stderr
error: impls of moku::State must use the generic <BlinkyState>
  --> tests/compile_fail/state/wrong_state_enum.rs:18:10
   |
18 |     impl State<BlonkyState> for Bottom {}
   |          ^^^^^
